add solutions